--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>草山共學生活</title>
+    <meta property="og:url" content="https://bestian.github.io/group/"/>
+    <meta property="og:locale" content="zh-TW" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="草山共學生活" />
+    <meta property="og:description" content="我們在此做生命經驗回溯、書寫、繪畫、唱歌舞蹈，或劉慧君老師的食氣、金錢課提到的部份練習。"/>
+    <meta property="og:image" content="https://bestian.github.io/group/logo.png" />
+    <meta property="og:image:alt" content="logo" />
+    <meta property="og:image:type" content="image/png" />
   </head>
   <body>
     <noscript>
